Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36190

HiDPI state not exposed to CSS media queries and image sets

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.3.0
    • 5.1.1, 5.2.0
    • WebKit
    • None
    • OSX 10.9, Qt 5.1.1, Qt 5.2.0

      JS window.devicePixelRatio returns 1 on retina displays with Qt 5.1.1 and Qt 5.2.0;

      "@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
      only screen and (min-device-pixel-ratio: 1.5)" also fails to work.

      Build fancybrowser app from Qt examples and open attached html on Mac with retina display. Compare to results in Chrome and Safari.

        1. webkit_retina_test.zip
          0.7 kB
          Sergei Nevdakh
        2. Patch
          0.8 kB
          Allan Sandfeld Jensen
        3. Patch
          5 kB
          Allan Sandfeld Jensen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            sergei.nevdakh Sergei Nevdakh
            Votes:
            7 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes