Source/WebKit/qt/WebCoreSupport/QWebPageAdapter.h
@@ -374,6 +374,7 @@ public:
     };
 
     ViewportAttributes viewportAttributesForSize(const QSize& availableSize, const QSize& deviceSize) const;
+    void setDevicePixelRatio(int devicePixelRatio);
 
     QWebSettings *settings;
 
